almost all thinks are created all the products and description and footer completed

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,6 @@
 [LocalizedFileNames]
 Screenshot 2024-05-25 131623.png=@Screenshot 2024-05-25 131623,0
+Screenshot 2024-05-26 145417.png=@Screenshot 2024-05-26 145417,0
+Screenshot 2024-05-26 145450.png=@Screenshot 2024-05-26 145450,0
+Screenshot 2024-05-26 152728.png=@Screenshot 2024-05-26 152728,0
+Screenshot 2024-05-26 152736.png=@Screenshot 2024-05-26 152736,0
